--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -34,7 +34,7 @@
                     string="Confirm" type="object" context="{'validate_analytic': True}"
                     invisible="state != 'sales_supervisor'"/>
             </xpath> -->
-            <xpath expr="//button[@name='action_confirm']" position="after">
+            <xpath expr="//button[@name='action_confirm']" position="before">
                  <button name="action_sales_manager" data-hotkey="q"
                     string="Sales Manager  Approval" type="object" context="{'validate_analytic': True}"
                     invisible="state != 'sales_supervisor'" groups="medigates_sale.group_sale_manager"/>
