--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -85,6 +85,16 @@
               sequence="1"
               action="action_account_sale_orders"/>
 
+    <record id="view_stock_move_line_tree_inherit_exp_date" model="ir.ui.view">
+        <field name="name">stock.move.line.tree.exp.date</field>
+        <field name="model">stock.move.line</field>
+        <field name="inherit_id" ref="stock.view_move_line_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='lot_id']" position="after">
+                <field name="lot_expiration_date"/>
+            </xpath>
+        </field>
+    </record>
   
     </data>
 </odoo>
